--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 	<title>Guess the Number | Game</title>
 
-	<meta name="theme-color" content="#743ad5">
-  	<meta name="apple-mobile-web-app-status-bar" content="#743ad5">
+	<meta name="theme-color" content="#0088FF">
+  	<meta name="apple-mobile-web-app-status-bar" content="#0088FF">
 
 	<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png" />
 	<link rel="apple-touch-icon" href="icons/apple-touch-icon.png" />
